# gmail-stats

./: .gitignore  Pipfile  README.md  gmail.py  pyproject.toml  sender.py
.github/: dependabot.yml
.github/workflows/: test.yml
gmail_stats/: __init__.py  cli.py  sender.py  storage.py  thread.py
gmail_stats/tests/: test_gmail.py
tests/: test_cli.py  test_sender.py  test_storage.py  test_thread.py
