[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "gmail-stats"
version = "0.1.0"
description = "A tool to analyze Gmail threads and messages"
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "click",
    "rich",
    "limits>=5.2.0",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib"
]

[project.scripts]
gmail-stats = "gmail_stats:main"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
click = "*"
rich = "*"
limits = "^5.2.0"
google-api-python-client = "*"
google-auth-httplib2 = "*"
google-auth-oauthlib = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
black = "^25.1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"] 